[chromium] Fix accelerated Canvas2D with threaded compositing. https://bugs.webkit.org/show_bug.cgi?id=80998

Reviewed by James Robinson.

Source/WebCore:

Covered by unit tests Canvas2DLayerChromiumTest and
TreeSynchronizerTest.

* platform/graphics/chromium/Canvas2DLayerChromium.cpp:
(WebCore::Canvas2DLayerChromium::paintContentsIfDirty):
(WebCore):
Delay creation of the front texture for double-buffering until the
first call to paintContentsIfDirty().
* platform/graphics/chromium/Canvas2DLayerChromium.h:
(Canvas2DLayerChromium):
Remove setTextureManager() and setLayerTreeHost(), since their job
has been subsumed by paintContentsIfDirty().
* platform/graphics/chromium/TreeSynchronizer.cpp:
(WebCore::TreeSynchronizer::updateScrollbarLayerPointersRecursive):
Perform an early-out if the passed-in layer is NULL.

Source/WebKit/chromium:

* tests/Canvas2DLayerChromiumTest.cpp:
Instantiate a CCLayerTreeHost, so that Canvas2DLayerChromium can
retrieve its texture manager.  Also move the test into the unnamed
namespace -- since it's already using WebCore, there's little reason for
it to also be in the namespace.
* tests/TreeSynchronizerTest.cpp:
(WebKitTests):
(WebKitTests::TEST):
Add a new test for trying to synchronize NULL tree.


Canonical link: https://commits.webkit.org/98321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110753 268f45cc-cd09-0410-ab3c-d52691b4dbfc